--- a/kubedepend/charts/kubedepend-chaos/templates/network-delay-chaos.yaml
+++ b/kubedepend/charts/kubedepend-chaos/templates/network-delay-chaos.yaml
@@ -9,22 +9,22 @@ metadata:
 spec:
   action: delay
   mode: fixed-percent
-  {{- if .Values.networkDelayChaos.strength == "low" }}
+  {{- if eq .Values.networkDelayChaos.strength "low" }}
   value: {{ .Values.mode.fixPercent.low }}
-  {{- else if .Values.networkDelayChaos.strength == "high" }}
+  {{- else if eq .Values.networkDelayChaos.strength "high" }}
   value: {{ .Values.mode.fixPercent.high }}
-  {{- else .Values.networkDelayChaos.strength == "medium" }}
+  {{- else }}
   value: {{ .Values.mode.fixPercent.medium }}
   {{- end }}
   selector:
     namespace:
       - kubedepend
   delay:
-    {{- if .Values.networkDelayChaos.strength == "low" }}
+    {{- if eq .Values.networkDelayChaos.strength "low" }}
     latency: "500ms"
-    {{- else if .Values.networkDelayChaos.strength == "high" }}
+    {{- else if eq .Values.networkDelayChaos.strength "high" }}
     latency: "2000ms"
-    {{- else .Values.networkDelayChaos.strength == "medium" }}
+    {{- else }}
     latency: "1000ms"
     {{- end }}
   duration: "60s"
