--- a/kubedepend/charts/kubedepend-chaos/templates/stress-cpu-chaos.yaml
+++ b/kubedepend/charts/kubedepend-chaos/templates/stress-cpu-chaos.yaml
@@ -5,11 +5,11 @@ metadata:
   name: burn-cpu
 spec:
   mode: fixed-percent
-  {{- if .Values.stressCpuChaos.strength == "low" }}
+  {{- if eq .Values.stressCpuChaos.strength "low" }}
   value: {{ .Values.mode.fixPercent.low }}
-  {{- else if .Values.stressCpuChaos.strength == "high" }}
+  {{- else if eq .Values.stressCpuChaos.strength "high" }}
   value: {{ .Values.mode.fixPercent.high }}
-  {{- else .Values.stressCpuChaos.strength == "medium" }}
+  {{- else }}
   value: {{ .Values.mode.fixPercent.medium }}
   {{- end }}
   selector:
@@ -18,11 +18,11 @@ spec:
   stressors:
     cpu:
       workers: 4
-      {{- if .Values.stressCpuChaos.strength == "low" }}
+      {{- if eq .Values.stressCpuChaos.strength "low" }}
       load: 20
-      {{- else if .Values.stressCpuChaos.strength == "high" }}
+      {{- else if eq .Values.stressCpuChaos.strength "high" }}
       load: 80
-      {{- else .Values.stressCpuChaos.strength == "medium" }}
+      {{- else .Values.stressCpuChaos.strength "medium" }}
       load: 50
       {{- end }}
   duration: "60s"
