--- a/kubedepend/charts/kubedepend-chaos/templates/network-partition-chaos.yaml
+++ b/kubedepend/charts/kubedepend-chaos/templates/network-partition-chaos.yaml
@@ -9,11 +9,11 @@ metadata:
 spec:
   action: partition
   mode: fixed-percent
-  {{- if .Values.networkPartitionChaos.strength == "low" }}
+  {{- if eq .Values.networkPartitionChaos.strength "low" }}
   value: {{ .Values.mode.fixPercent.low }}
-  {{- else if .Values.networkPartitionChaos.strength == "high" }}
+  {{- else if eq .Values.networkPartitionChaos.strength "high" }}
   value: {{ .Values.mode.fixPercent.high }}
-  {{- else .Values.networkPartitionChaos.strength == "medium" }}
+  {{- else }}
   value: {{ .Values.mode.fixPercent.medium }}
   {{- end }}
   selector:
@@ -25,11 +25,11 @@ spec:
       namespaces:
         - kubedepend
     mode: fixed-percent
-    {{- if .Values.networkPartitionChaos.strength == "low" }}
+    {{- if eq .Values.networkPartitionChaos.strength "low" }}
     value: 20
-    {{- else if .Values.networkPartitionChaos.strength == "high" }}
+    {{- else if eq .Values.networkPartitionChaos.strength "high" }}
     value: 35
-    {{- else .Values.networkPartitionChaos.strength == "medium" }}
+    {{- else }}
     value: 50
     {{- end }}
   duration: "5s"
