Fix helm template syntax

--- a/kubedepend/charts/kubedepend-chaos/templates/io-chaos.yaml
+++ b/kubedepend/charts/kubedepend-chaos/templates/io-chaos.yaml
@@ -22,7 +22,7 @@ spec:
   delay: "5000ms"
   {{- else }}
   delay: "2500ms"
-  {{- else end }}
+  {{- end }}
   percent: 100
   duration: "60s"
   scheduler:
