--- a/kubedepend/charts/kubedepend-chaos/templates/pod-kill-chaos.yaml
+++ b/kubedepend/charts/kubedepend-chaos/templates/pod-kill-chaos.yaml
@@ -11,11 +11,11 @@ spec:
   action: pod-failure
   mode: fixed-percent
   {{- if eq .Values.podFailureChaos.strength "low" }}
-  value: {{ .Values.mode.fixPercent.low }}
+  value: {{ .Values.mode.fixPercent.low | quote }}
   {{- else if eq .Values.podFailureChaos.strength "high" }}
-  value: {{ .Values.mode.fixPercent.high }}
+  value: {{ .Values.mode.fixPercent.high | quote }}
   {{- else }}
-  value: {{ .Values.mode.fixPercent.medium }}
+  value: {{ .Values.mode.fixPercent.medium | quote }}
   {{- end }}
   selector:
     namespaces:
