--- a/kubedepend/charts/kubedepend-chaos/templates/network-delay-chaos.yaml
+++ b/kubedepend/charts/kubedepend-chaos/templates/network-delay-chaos.yaml
@@ -10,11 +10,11 @@ spec:
   action: delay
   mode: fixed-percent
   {{- if eq .Values.networkDelayChaos.strength "low" }}
-  value: {{ .Values.mode.fixPercent.low }}
+  value: {{ .Values.mode.fixPercent.low | quote }}
   {{- else if eq .Values.networkDelayChaos.strength "high" }}
-  value: {{ .Values.mode.fixPercent.high }}
+  value: {{ .Values.mode.fixPercent.high | quote }}
   {{- else }}
-  value: {{ .Values.mode.fixPercent.medium }}
+  value: {{ .Values.mode.fixPercent.medium | quote }}
   {{- end }}
   selector:
     namespace:
