--- a/kubedepend/charts/kubedepend-chaos/templates/stress-cpu-chaos.yaml
+++ b/kubedepend/charts/kubedepend-chaos/templates/stress-cpu-chaos.yaml
@@ -6,11 +6,11 @@ metadata:
 spec:
   mode: fixed-percent
   {{- if eq .Values.stressCpuChaos.strength "low" }}
-  value: {{ .Values.mode.fixPercent.low }}
+  value: {{ .Values.mode.fixPercent.low | quote }}
   {{- else if eq .Values.stressCpuChaos.strength "high" }}
-  value: {{ .Values.mode.fixPercent.high }}
+  value: {{ .Values.mode.fixPercent.high | quote }}
   {{- else }}
-  value: {{ .Values.mode.fixPercent.medium }}
+  value: {{ .Values.mode.fixPercent.medium | quote }}
   {{- end }}
   selector:
     namespaces:
@@ -22,7 +22,7 @@ spec:
       load: 20
       {{- else if eq .Values.stressCpuChaos.strength "high" }}
       load: 80
-      {{- else .Values.stressCpuChaos.strength "medium" }}
+      {{- else }}
       load: 50
       {{- end }}
   duration: "60s"
