Fix namespace selector in chaos objects

--- a/kubedepend/charts/kubedepend-chaos/templates/io-chaos.yaml
+++ b/kubedepend/charts/kubedepend-chaos/templates/io-chaos.yaml
@@ -10,7 +10,7 @@ spec:
   action: latency
   mode: one
   selector:
-    namespace:
+    namespaces:
       - kubedepend
     labelSelectors:
       app: kubedepend-db-app
