--- a/kubedepend/charts/kubedepend-chaos/templates/network-delay-chaos.yaml
+++ b/kubedepend/charts/kubedepend-chaos/templates/network-delay-chaos.yaml
@@ -17,7 +17,7 @@ spec:
   value: {{ .Values.mode.fixPercent.medium | quote }}
   {{- end }}
   selector:
-    namespace:
+    namespaces:
       - kubedepend
   delay:
     {{- if eq .Values.networkDelayChaos.strength "low" }}
