Update Chaos Mesh manifests

--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -1,6 +1,8 @@
 # Default values for chaos-mesh.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+nameOverride: ""
+fullnameOverride: ""
 
 # clusterScoped is whether chaos-mesh should manage kubernetes cluster wide chaos
 # Also see rbac.create and controllerManager.serviceAccount
@@ -21,7 +23,7 @@ timezone: "UTC"
 # enableProfiling is a flag to enable pprof in controller-manager and chaos-daemon.
 enableProfiling: true
 
-kubectlImage: bitnami/kubectl:latest
+registry: ""
 
 controllerManager:
   hostNetwork: false
@@ -29,14 +31,12 @@ controllerManager:
 
   replicaCount: 1
 
+  priorityClassName: ""
+
   image: pingcap/chaos-mesh:latest
   imagePullPolicy: IfNotPresent
 
-  nameOverride: ""
-  fullnameOverride: ""
-
-  allowedNamespaces: ""
-  ignoredNamespaces: ""
+  enableFilterNamespace: false
 
   # targetNamespace only works with clusterScoped is false(namespace scoped mode).
   # It means namespace which will be injected chaos
@@ -65,6 +65,9 @@ controllerManager:
 
   podAnnotations: {}
 
+  # This is Dangerous. Run only on temporary clusters.
+  allowHostNetworkTesting: false
+
 chaosDaemon:
   image: pingcap/chaos-daemon:latest
   imagePullPolicy: IfNotPresent
@@ -73,13 +76,31 @@ chaosDaemon:
   env: {}
   hostNetwork: false
 
+  # Run chaos-daemon container in privileged mode. Processes in privileged containers
+  # are essentially equivalent to root on the host.
+  # If it is set to false, the following capabilities will be set. You can grant certain privileges
+  # to a process without granting all the privileges of the root user.
+  ## capabilities:
+  ##   add:
+  ##     - SYS_PTRACE
+  ##     - NET_ADMIN
+  ##     - MKNOD
+  ##     - SYS_CHROOT
+  ##     - SYS_ADMIN
+  ##     - KILL
+  ##     # CAP_IPC_LOCK is used to lock memory
+  ##     - IPC_LOCK
+  privileged: true
+
+  priorityClassName: ""
+
   podAnnotations: {}
 
   serviceAccount: chaos-daemon
 
   # enable a podSecurityPolicy(psp)
   podSecurityPolicy: false
-  
+
   # runtime specifies which container runtime to use. Currently
   # we only supports docker and containerd.
   runtime: docker
@@ -104,17 +125,25 @@ chaosDaemon:
     #   cpu: 250m
     #   memory: 512Mi
 
+  nodeSelector: {}
+
   tolerations: []
+
+  affinity: {}
 
 dashboard:
   create: true
 
   replicaCount: 1
 
+  priorityClassName: ""
+
   serviceAccount: chaos-controller-manager
 
   image: pingcap/chaos-dashboard:latest
   imagePullPolicy: IfNotPresent
+
+  securityMode: false
 
   nodeSelector: {}
 
@@ -123,6 +152,12 @@ dashboard:
   affinity: {}
 
   podAnnotations: {}
+
+  service:
+    annotations: {}
+    type: NodePort
+    # clusterIP:
+    # nodePort:
 
   resources:
     # We usually recommend not to specify default resources and to leave this as a conscious
@@ -218,9 +253,11 @@ dnsServer:
 
   serviceAccount: chaos-dns-server
 
-  image: pingcap/coredns:latest
+  image: pingcap/coredns:v0.2.0
 
   imagePullPolicy: IfNotPresent
+
+  priorityClassName: ""
 
   nodeSelector: {}
 
@@ -255,6 +292,8 @@ prometheus:
 
   image: prom/prometheus:v2.18.1
   imagePullPolicy: IfNotPresent
+
+  priorityClassName: ""
 
   nodeSelector: {}
 
@@ -293,6 +332,10 @@ webhook:
   certManager:
     enabled: false
 
+  # It is recommended that admission webhooks should evaluate as quickly as possible (typically in milliseconds),
+  # since they add to API request latency. It is encouraged to use a small timeout for webhooks.
+  # https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#timeouts
+  timeoutSeconds: 5
   # FailurePolicy defines how unrecognized errors and timeout errors from the admission webhook are handled.
   # https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#failure-policy
   FailurePolicy: Ignore
@@ -304,10 +347,12 @@ webhook:
     - networkchaos
     - kernelchaos
     - stresschaos
+    - awschaos
+    - gcpchaos
     - podiochaos
     - podnetworkchaos
-    # - dnschaos
-    # - jvmchaos
+    - dnschaos
+    - jvmchaos
 
 bpfki:
   create: false
