--- a/kubedepend/charts/kubedepend-chaos/templates/stress-mem-chaos.yaml
+++ b/kubedepend/charts/kubedepend-chaos/templates/stress-mem-chaos.yaml
@@ -18,11 +18,11 @@ spec:
   stressors:
     memory:
       {{- if eq .Values.stressMemChaos.strength "low" }}
-      workers: "1"
+      workers: 1
       {{- else if eq .Values.stressMemChaos.strength "high" }}
-      workers: "3"
+      workers: 3
       {{- else }}
-      workers: "2"
+      workers: 2
       {{- end }}
   duration: "60s"
   scheduler:
