--- a/jenkins/docker-compose.yaml
+++ b/jenkins/docker-compose.yaml
@@ -4,8 +4,11 @@ services:
     image: jenkins/jenkins:lts-jdk11
     ports:
       - "8080:8080"
+    # environment:
     volumes:
       - jenkins-vol:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /usr/bin/docker:/usr/bin/docker
 
 
 volumes:
