--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -27,7 +27,24 @@ pipeline {
         stage('Set up AWS CLI') {
             steps {
                 echo "Setup AWS CLI"
-                sh "/usr/bin/docker run hello-world"
+                withCredentials(
+                    [
+                        usernamePassword(
+                            credentialsId: 'aws-key',
+                            usernameVariable: 'AWS_ACCESS_KEY_ID',
+                            passwordVariable: 'AWS_SECRET_ACCESS_KEY'
+                        ),
+                        string(
+                            credentialsId: 'aws-session-token',
+                            variable: 'AWS_SESSION_TOKEN'
+                        )
+                    ]
+                )
+                sh "/usr/bin/docker run amazon/aws-cli \
+                    --env AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
+                    --env AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
+                    --env AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN \
+                    cloudformation list-stacks --region ${env.AWS_REGION}"
             }
         }
 
