--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -40,11 +40,11 @@ pipeline {
                         )
                     ]
                 ) {
-                    sh "/usr/bin/docker run amazon/aws-cli \
+                    sh "/usr/bin/docker run \
                         --env AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
                         --env AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
                         --env AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN \
-                        cloudformation list-stacks --region ${env.AWS_REGION}"
+                        amazon/aws-cli cloudformation list-stacks --region ${env.AWS_REGION}"
                 }
                 
             }
