--- a/jenkins/docker-compose.yaml
+++ b/jenkins/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   jenkins:
-    image: jenkins/jenkins:lts-jdk11
+    build: .
     # a bit ugly
     user: root
     ports:
