--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,9 +1,3 @@
-def awsCliEnvVars = [
-    "--env AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID",
-    "--env AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY",
-    "--env AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN"
-]
-
 pipeline { 
     agent any 
     options {
@@ -45,7 +39,9 @@ pipeline {
                     ]
                 ) {
                     sh "/usr/bin/docker run \
-                        ${awsCliEnvVars.join(' ')} \
+                        --env AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
+                        --env AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
+                        --env AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN \
                         amazon/aws-cli cloudformation list-stacks --region ${env.AWS_REGION}"
                 }
                 
@@ -69,7 +65,9 @@ pipeline {
                     ]
                 ) {
                     sh "/usr/bin/docker run \
-                        ${awsCliEnvVars.join(' ')} \
+                        --env AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
+                        --env AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
+                        --env AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN \
                         amazon/aws-cli cloudformation list-stacks --region ${env.AWS_REGION}"
                 }
             }
