--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,7 +2,13 @@ def awsCliImage = "amazon/aws-cli"
 def awsCFBaseCommand = "${awsCliImage} cloudformation"
 def cloudformationStackArn = ""
 def cfStackStatusFilters = [
-    "CREATE_COMPLETE"
+    "CREATE_IN_PROGRESS",
+    "CREATE_FAILED",
+    "CREATE_COMPLETE",
+    "ROLLBACK_IN_PROGRESS",
+    "ROLLBACK_FAILED",
+    "ROLLBACK_COMPLETE",
+    "DELETE_IN_PROGRESS"
 ]
 
 pipeline { 
@@ -52,20 +58,24 @@ pipeline {
                 ) {
                     script {
                         echo "Check if '$CFStackName' CloudFormation stack exists"
-                        def cfStackExists = sh(
+                        def stacksResult = sh(
                             script: "/usr/bin/docker run \
                                 --env AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
                                 --env AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
                                 --env AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN \
-                                ${awsCFBaseCommand} list-stacks --region $AWSRegion --stack-status-filter ${cfStackStatusFilters.join(' ')} | jq -r '.StackSummaries | map(select(.StackName == \"morova-eks-cluster\")) | .[].StackId'",
+                                ${awsCFBaseCommand} list-stacks --region $AWSRegion --stack-status-filter ${cfStackStatusFilters.join(' ')} | jq -r '.StackSummaries | map(select(.StackName == \"morova-eks-cluster\"))'",
                             returnStdout: true
-                        ).trim() != ""
+                        ).trim()
+                        def jsonSlurper = new JsonSlurper()
+                        def stacksResultParsed = jsonSlurper.parseText(stacksResult)
+                        echo stacksResultParsed
 
-                        echo "cfStackExists = ${cfStackExists}"
 
-                        if (!cfStackExists) {
-                            echo "Creating CloudFormation stack"
-                        }
+                        // echo "cfStackExists = ${cfStackExists}"
+
+                        // if (!cfStackExists) {
+                        //     echo "Creating CloudFormation stack"
+                        // }
                     }
                 }
                 
