Import groovy.json

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,3 +1,5 @@
+import groovy.json
+
 def awsCliImage = "amazon/aws-cli"
 def awsCFBaseCommand = "${awsCliImage} cloudformation"
 def cloudformationStackArn = ""
